--- a/src/views/partials/_head.ejs
+++ b/src/views/partials/_head.ejs
@@ -33,3 +33,5 @@
 <script defer src="/js/rating.js"></script>
 <script defer src="/js/userPicDropDown.js"></script>
 <title><%- locals.title || "Alizada" %></title>
+<!--Tailwind-->
+<script src="https://cdn.tailwindcss.com"></script>
