--- a/src/views/partials/_category_bar.ejs
+++ b/src/views/partials/_category_bar.ejs
@@ -17,25 +17,11 @@
         <!-- Category list -->
         <ul id="cate-sidemenu" class="whitespace-nowrap bg-white offcanvas-l [&_li]:w-full [&_li]:text-center [&_a]:px-12 [&_a]:py-4 [&_a:hover]:bg-violet-200 sidemenu-transition-300 md:static md:flex-row md:bg-transparent md:[&_a]:p-0 md:gap-6  md:[&_a:hover]:bg-transparent md:[&_a:hover]:text-violet-400">
             <li><a class="block" href="/users/customer?category=Clothes">Clothes</a></li>
-            <li><a class="block" href="/users/customer?category=Electronic+and+Appliances">Electronics</a></li>
-            <li><a class="block" href="/users/customer?category=Food+and+Beverages">Food & Beverages</a></li>
-            <li><a class="block" href="/users/customer?category=Toys">Toys</a></li>
+            <li><a class="block" href="/users/customer?category=Electronic+and+Appliances">Shoes</a></li>
+            <li><a class="block" href="/users/customer?category=Food+and+Beverages">Watch</a></li>
+            <li><a class="block" href="/users/customer?category=Toys">...</a></li>
         </ul>
-        <!-- Search bar -->
-        <div class="flex gap-4 justify-end w-1/2 md:w-1/3">
-            <form id="searchForm" class="inline-flex justify-end w-full" action="/users/customer" method="get">
-                <input class="px-4 py-[0.125rem] w-full border border-solid border-gray-500 rounded-l-2xl focus:outline-none focus:border-black" type="text" name="name" placeholder="Search" value="<%= locals.searchOption ?  searchOption.name : '' %>">
-                <button class="px-4 py-[0.125rem] border border-solid bg-white border-gray-500 rounded-r-2xl" type="submit"><img class="w-5" src="./../../svg/search.svg" alt="Search"></button>
-            </form>
-            <a class="relative center-xy" href="/users/customer/shopping-cart">
-                <img class="w-7" src="/svg/shopping-cart.svg" alt="Shopping cart">
-                <% if (cart.length !== 0) { %>
-                    <span class="noti-circle inline-flex rounded-full border-solid border-2 border-white absolute -top-[3px] -right-[6.8px] center-xy text-white text-center aspect-square font-semibold w-[18px] h-[18px] bg-violet-500">
-                        <span class="-translate-y-[0.4px]" ><%= cart.length %></span>
-                    </span>
-                <% } %>
-            </a>
-        </div>
+   
     </nav>
 </div>
 
