--- a/src/views/vendor_page.ejs
+++ b/src/views/vendor_page.ejs
@@ -25,12 +25,12 @@
             
               <div class="bg-white shadow overflow-x-auto sm:rounded-lg ">
                 <table class="table">
-                  <thead class="bg-gray-50">
+                  <thead class="bg-blue-400">
                     <tr>
-                     <th class="md:px-6 md:py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Product Name</th>
-                     <th class="md:px-6 md:py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Price</th>
-                     <th class="md:px-6 md:py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Stock</th>
-                     <th class="md:px-6 md:py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
+                     <th class="md:px-6 md:py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Product Name</th>
+                     <th class="md:px-6 md:py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Price</th>
+                     <th class="md:px-6 md:py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Stock</th>
+                     <th class="md:px-6 md:py-3 text-left text-xs font-medium text-white uppercase tracking-wider">Actions</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -57,7 +57,7 @@
                 </table>
               </div>
             </div>
-            <a href="/users/vendor/addproduct" class="bg-green-500 hover:bg-green-600 text-white cursor-pointer w-auto py-2 px-4 mx-4 my-4 rounded-md text-center text-base transition duration-300 ease-in-out block">Add new product</a>
+            <a href="/users/vendor/addproduct" class="bg-blue-500 hover:bg-blue-600 text-white cursor-pointer w-auto py-2 px-4 mx-4 my-4 rounded-md text-center text-base transition duration-300 ease-in-out block">Add new product</a>
         </div>
 
         <!-- del-confirm-modal -->
