#5-Update-tos-privacy-mainpage-contact-front

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,23 +15,31 @@
     <%- include('partials/_header.ejs') %>
     <main>
                 <!-- Landing page decoration here -->
-        <div id="gradient" class="fixed -z-10 top-0 left-0 right-0 bottom-0 bg-gradient-to-b from-violet-300 via-transparent to-transparent opacity-30"></div>
+        <div id="gradient" class="fixed -z-10 top-0 left-0 right-0 bottom-0  bg-white opacity-30"></div>
                 <!-- Landing page decoration here -->
-                <!-- Hero section here -->
-        <%- include('partials/_hero_section.ejs') %>
-                <!-- Hero section here -->
+                <!-- Banner section here -->
+        <%- include('partials/_banner_section_3.ejs') %>
+                <!-- Banner section here -->
                 <!-- First banner section here -->
         <%- include('partials/_banner_section_1.ejs') %>
                 <!-- First banner section here -->
                 <!-- Second banner section here -->
         <%- include('partials/_banner_section_2.ejs') %>
                 <!-- Second banner section here -->
-            <!-- Top seller items section here -->
-        <%- include('partials/_top_seller_items.ejs') %>
-            <!-- Top seller items section here -->
-            <!-- Categories section here -->
-        <%- include('partials/_product_category.ejs') %>
-            <!-- Categories section here -->        
+                <!--New Stores section here-->
+        <%- include('partials/_new_stores.ejs') %> 
+                <!--New Stores section here-->  
+            <!-- New products items section here -->
+        <%- include('partials/_new_products.ejs') %>
+            <!-- New products items section here -->
+                <!--Featured Stores section here-->
+        <%- include('partials/_featured_store.ejs') %> 
+                <!--Featured Stores section here-->  
+            <!-- Featured products items section here -->
+        <%- include('partials/_featured_product.ejs') %>
+            <!-- Featured products items section here -->
+
+            <!-- Categories section here -->  
     </main>
     <%- include("partials/_footer.ejs"); %>
     <Script>
