--- a/src/views/partials/_footer.ejs
+++ b/src/views/partials/_footer.ejs
@@ -10,13 +10,13 @@
     <div class="flex flex-col items-center gap-y-2 bg-slate-800">
         <nav class="py-2">
             <ul class="flex gap-x-4 text-gray-500 [&_a:hover]:text-white">
-                <li><a href="/about-us">About Us</a></li>
+                <li><a href="/term-of-service">Terms of Services</a></li>
                 <li><a href="/privacy-policy">Privacy Policy</a></li>
                 <li><a href="/contact-us">Contact Us</a></li>
             </ul>
         </nav>
     </div>
     <div class="bg-slate-900 text-center py-1">
-        <p class="text-white">copyright &copy;2023 Alizada. designed by <span class="text-gray-500 uppercase">Hoang Thai Phuc</span></p>
+        <p class="text-white">Copyright &copy;2024 Shopmee. designed by <span class="text-gray-500 uppercase">G5</span></p>
     </div>
 </footer>
