--- a/src/views/partials/_navigation_bar.ejs
+++ b/src/views/partials/_navigation_bar.ejs
@@ -6,30 +6,32 @@
 <!-- ID: s3978081, s3977773, s3979367, s3978481, s3978826 -->
 <!-- Acknowledgement: W3School, TailwindCss, ChatGPT, Passport documentation, RemixIcons, Freepik, Web Dev Simplified -->
 
-<div>
-    <ul class="flex items-center gap-[1vw] mt-4">
-        <li><a class="hover:text-gray-500 ml-24 border-r-2 pr-4" href="/about-us">About us</a></li>
+<div class="bg-gradient-to-t from-[#56CCF2] to-[#2F80ED] h-full">
+    <ul class="flex items-center gap-[1vw]">
+        <li><a class="hover:text-gray-500 ml-24 border-r-2 pr-4 text-white" href="/about-us">About us</a></li>
         <% if (user) { %>
             <% if (userType == "Customer") { %>
                 <!-- Customer page -->
-                <li><a class="hover:text-gray-500 border-r-2 pr-4" href="/users/customer">Shop</a></li>
+                <li><a class="hover:text-gray-500 border-r-2 pr-4 text-white" href="/users/customer">Shop</a></li>
             <% } else if (userType == "Vendor") { %>
                 <!-- Vendor page -->
-                <li><a class="hover:text-gray-500 border-r-2 pr-4" href="/users/vendor">Products</a></li>
+                <li><a class="hover:text-gray-500 border-r-2 pr-4 text-white" href="/users/vendor">Products</a></li>
             <% } else if (userType == "Shipper") { %>
                 <!-- Shipper page -->
-                <li><a class="hover:text-gray-500 border-r-2 pr-4" href="/users/Shipper">Orders</a></li>
+                <li><a class="hover:text-gray-500 border-r-2 pr-4 text-white" href="/users/Shipper">Orders</a></li>
             <% } %>
         <% } else { %>
-            <li><a href="/users/customer">Shop</a></li>
+            <li><a class="hover:text-gray-500 border-r-2 pr-4 text-white" href="/users/customer">Shop</a></li>
         <% } %>
-        <li><a class="hover:text-gray-500 " href="/contact-us">Contact us</a></li>
+        <li><a class="hover:text-gray-500 border-r-2 pr-4 text-white" href="/contact-us">Contact us</a></li>
+        <li><a class="hover:text-gray-500 border-r-2 pr-4 text-white" href="/fees">Fees</a></li>
+        <li><a class="hover:text-gray-500  pr-4 text-white" href="/faqs">FAQs</a></li>
       </ul>
       <div class="container mx-auto px-4 py-8 flex items-center">
         <!-- logo -->
         <div class="cursor-pointer mr-auto md:w-48 flex-shrink-0 flex items-center gap-[1vw]" onclick="location.href='/'">
           <img class="w-20" src="/svg/shopmee-logo.svg" alt="">
-          <div class="font-bold text-3xl">Shopmee</div>
+          <div class="font-bold text-3xl text-white">Shopmee</div>
         </div>
     
         <!-- search -->
@@ -41,8 +43,8 @@
     
         <!-- phone number -->
         <div class="ml-auto md:w-48 hidden sm:flex flex-col place-items-end">
-          <span class="font-bold md:text-xl">0 123 456 78-90</span>
-          <span class="font-semibold text-sm text-gray-400">Support 8AM-9AM</span>
+          <span class="font-bold md:text-xl text-white">0 123 456 78-90</span>
+          <span class="font-semibold text-sm text-white">Support 8AM-9AM</span>
         </div>
     
         <!--Customer buttons -->
@@ -62,14 +64,14 @@
                     <% } %>
                 <% } else { %>
                     <!-- Login Link -->
-                    <li class=""><svg class="h-9 lg:h-10 p-2 text-gray-500 cursor-pointer" onclick="window.location.href='/auth/login'" aria-hidden="true" focusable="false" data-prefix="far" data-icon="user" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-user fa-w-14 fa-9x"><path fill="currentColor" d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"></path></svg></li>
+                    <li class=""><svg class="h-9 lg:h-10 p-2 text-white cursor-pointer" onclick="window.location.href='/auth/login'" aria-hidden="true" focusable="false" data-prefix="far" data-icon="user" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="svg-inline--fa fa-user fa-w-14 fa-9x"><path fill="currentColor" d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"></path></svg></li>
                 <% } %>
                 <!-- Code that separates My Account and Login -->
             </li>
         <!--Cart button-->
             <li class="ml-2 lg:ml-4 relative inline-block">
               <a class="" href="/users/customer/shopping-cart">
-                <svg class="h-9 lg:h-10 p-2 text-gray-500" aria-hidden="true" focusable="false" data-prefix="far" data-icon="shopping-cart" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="svg-inline--fa fa-shopping-cart fa-w-18 fa-9x"><path fill="currentColor" d="M551.991 64H144.28l-8.726-44.608C133.35 8.128 123.478 0 112 0H12C5.373 0 0 5.373 0 12v24c0 6.627 5.373 12 12 12h80.24l69.594 355.701C150.796 415.201 144 430.802 144 448c0 35.346 28.654 64 64 64s64-28.654 64-64a63.681 63.681 0 0 0-8.583-32h145.167a63.681 63.681 0 0 0-8.583 32c0 35.346 28.654 64 64 64 35.346 0 64-28.654 64-64 0-18.136-7.556-34.496-19.676-46.142l1.035-4.757c3.254-14.96-8.142-29.101-23.452-29.101H203.76l-9.39-48h312.405c11.29 0 21.054-7.869 23.452-18.902l45.216-208C578.695 78.139 567.299 64 551.991 64zM208 472c-13.234 0-24-10.766-24-24s10.766-24 24-24 24 10.766 24 24-10.766 24-24 24zm256 0c-13.234 0-24-10.766-24-24s10.766-24 24-24 24 10.766 24 24-10.766 24-24 24zm23.438-200H184.98l-31.31-160h368.548l-34.78 160z"></path></svg>
+                <svg class="h-9 lg:h-10 p-2 text-white" aria-hidden="true" focusable="false" data-prefix="far" data-icon="shopping-cart" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" class="svg-inline--fa fa-shopping-cart fa-w-18 fa-9x"><path fill="currentColor" d="M551.991 64H144.28l-8.726-44.608C133.35 8.128 123.478 0 112 0H12C5.373 0 0 5.373 0 12v24c0 6.627 5.373 12 12 12h80.24l69.594 355.701C150.796 415.201 144 430.802 144 448c0 35.346 28.654 64 64 64s64-28.654 64-64a63.681 63.681 0 0 0-8.583-32h145.167a63.681 63.681 0 0 0-8.583 32c0 35.346 28.654 64 64 64 35.346 0 64-28.654 64-64 0-18.136-7.556-34.496-19.676-46.142l1.035-4.757c3.254-14.96-8.142-29.101-23.452-29.101H203.76l-9.39-48h312.405c11.29 0 21.054-7.869 23.452-18.902l45.216-208C578.695 78.139 567.299 64 551.991 64zM208 472c-13.234 0-24-10.766-24-24s10.766-24 24-24 24 10.766 24 24-10.766 24-24 24zm256 0c-13.234 0-24-10.766-24-24s10.766-24 24-24 24 10.766 24 24-10.766 24-24 24zm23.438-200H184.98l-31.31-160h368.548l-34.78 160z"></path></svg>
                 <% if (cart.length !== 0) { %>
                 <div class="absolute -top-1 right-0 z-10 bg-yellow-400 text-xs font-bold px-1 py-0.5 rounded-sm"><%= cart.length %></div>
                 <% } %>    
