--- a/src/views/login_form.ejs
+++ b/src/views/login_form.ejs
@@ -9,19 +9,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <%- include("partials/_head") %>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login page</title>
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.16/dist/tailwind.min.css">
 </head>
-<body class="flex items-center justify-center h-screen bg-cover bg-center bg-gradient-to-r from-pink-300 to-purple-400">
-  <div class="bg-white p-10 w-11/12 md:w-5/12 rounded-2xl shadow-2xl">
-    <img src="/svg/lazada.svg" class="mx-auto w-10" alt="Alizada logo">
-    <h1 class="text-center text-2xl font-bold mb-5">Alizada</h1>
+<body class="flex items-center justify-center h-screen bg-cover bg-center bg-gradient-to-r from-[#56CCF2] to-[#2F80ED]">
+  <div class="bg-slate-200 p-10 w-11/12 md:w-5/12 rounded-2xl shadow-2xl">
+    <img src="/svg/shopmee-logo.svg" class="mx-auto w-10" alt="Alizada logo">
+    <h1 class="text-center text-2xl font-bold mb-5">Shopmee</h1>
     <%- include ('./partials/_messages') %>
     <form action="/auth/login" method="post">
-      <div class="mb-4">
+      <div class="mb-4">  
         <label class="block text-gray-700 mb-2" for="username">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 inline" viewBox="0 0 24 24"><path d="M4 22C4 17.5817 7.58172 14 12 14C16.4183 14 20 17.5817 20 22H18C18 18.6863 15.3137 16 12 16C8.68629 16 6 18.6863 6 22H4ZM12 13C8.685 13 6 10.315 6 7C6 3.685 8.685 1 12 1C15.315 1 18 3.685 18 7C18 10.315 15.315 13 12 13ZM12 11C14.21 11 16 9.21 16 7C16 4.79 14.21 3 12 3C9.79 3 8 4.79 8 7C8 9.21 9.79 11 12 11Z"></path></svg>
           Username
