--- a/src/views/partials/_new_stores.ejs
+++ b/src/views/partials/_new_stores.ejs
@@ -6,12 +6,10 @@
 <!-- ID: s3978081, s3977773, s3979367, s3978481, s3978826 -->
 <!-- Acknowledgement: W3School, TailwindCss, ChatGPT, Passport documentation, RemixIcons, Freepik, Web Dev Simplified -->
 
-
-
-
-<div class=" md:lg:xl:px-40  bg-white border-t border-b py-10 bg-opacity-10" >
+                <!-- New stores section -->
+<div class=" md:lg:xl:px-40   border-t border-b py-10 bg-opacity-10" style="background-image: url('https://www.toptal.com/designers/subtlepatterns/uploads/dot-grid.png') ;">
     <div class="w-full   bg-slate-100 shadow-xl shadow-indigo-200 py-5 px-10 flex justify-between items-center">
-        <p class=" text-slate-400"> <span class="text-3xl font-base">Categories</span>
+        <p class=" text-slate-400"> <span class="text-3xl font-base">New Stores</span>
     </div>
     <div class="grid grid-flow-col grid-rows-2 md:lg:xl:grid-cols-3 group bg-white shadow-xl s2">
         <div
@@ -71,48 +69,9 @@
                     stroke="currentColor" stroke-width="1.5">
                 </svg></span>
             <p class="font-sans text-slate-700 text-base mt-3">Most Experienced Team</p>
-
         </div>
-
-        <div
-            class="p-10 flex flex-col items-center text-center group md:lg:xl:border-r md:lg:xl:border-b hover:bg-slate-50 cursor-pointer">
-            <span class="p-1 rounded-full bg-red-500 text-white shadow-lg shadow-red-200"><svg
-                    xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24"
-                    stroke="currentColor" stroke-width="1.5">
-                </svg></span>
-            <p class="font-sans text-slate-700 text-base mt-3">Most Experienced Team</p>
-
-        </div>
-        <div
-            class="p-10 flex flex-col items-center text-center group md:lg:xl:border-r md:lg:xl:border-b hover:bg-slate-50 cursor-pointer">
-            <span class="p-1 rounded-full bg-red-500 text-white shadow-lg shadow-red-200"><svg
-                    xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24"
-                    stroke="currentColor" stroke-width="1.5">
-                </svg></span>
-            <p class="font-sans text-slate-700 text-base mt-3">Most Experienced Team</p>
-
-        </div>
-        <div
-            class="p-10 flex flex-col items-center text-center group md:lg:xl:border-r md:lg:xl:border-b hover:bg-slate-50 cursor-pointer">
-            <span class="p-1 rounded-full bg-red-500 text-white shadow-lg shadow-red-200"><svg
-                    xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24"
-                    stroke="currentColor" stroke-width="1.5">
-                </svg></span>
-            <p class="font-sans text-slate-700 text-base mt-3">Most Experienced Team</p>
-
-        </div>
-
-                    <div
-            class="p-10 flex flex-col items-center text-center group md:lg:xl:border-r md:lg:xl:border-b hover:bg-slate-50 cursor-pointer">
-            <span class="p-1 rounded-full bg-red-500 text-white shadow-lg shadow-red-200"><svg
-                    xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24"
-                    stroke="currentColor" stroke-width="1.5">
-                </svg></span>
-            <p class="font-sans text-slate-700 text-base mt-3">Most Experienced Team</p>
-
-        </div>
-        
     </div>
-
-
 </div>
+
+
+                <!-- New stores section -->
