--- a/src/views/vendor_page.ejs
+++ b/src/views/vendor_page.ejs
@@ -58,6 +58,7 @@
               </div>
             </div>
             <a href="/users/vendor/addproduct" class="bg-blue-500 hover:bg-blue-600 text-white cursor-pointer w-auto py-2 px-4 mx-4 my-4 rounded-md text-center text-base transition duration-300 ease-in-out block">Add new product</a>
+            <a href="/users/vendor/storepage" class="bg-blue-500 hover:bg-blue-600 text-white cursor-pointer w-auto py-2 px-4 mx-4 my-4 rounded-md text-center text-base transition duration-300 ease-in-out block">Go to store home page</a>
         </div>
 
         <!-- del-confirm-modal -->
