--- a/src/views/customer_shopping.ejs
+++ b/src/views/customer_shopping.ejs
@@ -45,6 +45,7 @@
                 <div class="w-full md:w-4/5">   
                     <%- include("partials/_product_container"); %>
                 </div>
+                <a href="/users/customer/storepage">sdaskn</a>
             </div>
         </section>
 
