--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -54,6 +54,9 @@
                     <div class="mt-2">
                         <p class="text-sm inline">Publisher: <span class="text-gray-400"><%= product.publisher.businessName %></span></p>
                     </div>
+                    <div class="mt-2">
+                        <a href="/users/customer/storepage"><p class="text-sm inline">Store: <span class="text-gray-400"><%= product.publisher.businessName %></span></p></a>
+                    </div>                  
                     <!-- Tags -->
                     <div class="flex flex-wrap gap-x-2">
                         <p class="text-sm inline">Tags:</p>
