--- a/src/views/partials/_head.ejs
+++ b/src/views/partials/_head.ejs
@@ -17,7 +17,7 @@
     rel="stylesheet"
 > 
 <link rel="stylesheet" href="/style.css">
-<link rel="icon" type="image/x-icon" href="/images/lazada.ico">
+<link rel="icon" type="image/x-icon" href="/svg/shopmee-logo.svg">
 <!--Script-->
 <!--FilePond-->
 <script src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
@@ -36,7 +36,7 @@
 <script defer src="/js/sidemenu.js"></script>
 <script defer src="/js/rating.js"></script>
 <script defer src="/js/userPicDropDown.js"></script>
-<title><%- locals.title || "Alizada" %></title>
+<title><%- locals.title || "Shopmee" %></title>
 <!--Tailwind-->
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
