--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -9,7 +9,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include("partials/_head", {title: "Vendor add product"}) %>
+    <%- include("partials/_head", {title: "Store Owner add product"}) %>
     <!-- <script defer src="/js/rating.js"></script> -->
     <script defer src="/js/quantityControl.js"></script>
 </head>
