--- a/src/views/vendorProductDetail.ejs
+++ b/src/views/vendorProductDetail.ejs
@@ -9,7 +9,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include("partials/_head", {title: "Vendor update product"}) %>
+    <%- include("partials/_head", {title: "Store owner update product"}) %>
     <script defer src="/js/fileUpload.js"></script>
 </head>
 <body>
