--- a/src/views/vendor_page.ejs
+++ b/src/views/vendor_page.ejs
@@ -9,7 +9,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include("partials/_head", {title: "Vendor page"}) %>
+    <%- include("partials/_head", {title: "Store owner page"}) %>
     <!-- <link rel="stylesheet" href="/vendor_page.css"> -->
 </head>
 <body>
