--- a/src/views/login_form.ejs
+++ b/src/views/login_form.ejs
@@ -18,7 +18,7 @@
 </head>
 <body class="flex items-center justify-center h-screen bg-cover bg-center bg-gradient-to-r from-[#56CCF2] to-[#2F80ED]">
   <div class="bg-slate-200 p-10 w-11/12 md:w-5/12 rounded-2xl shadow-2xl">
-    <img src="/svg/shopmee-logo.svg" class="mx-auto w-10" alt="Alizada logo">
+    <img src="/svg/shopmee-logo.svg" class="mx-auto w-20" alt="Shopmee logo">
     <h1 class="text-center text-2xl font-bold mb-5">Shopmee</h1>
     <%- include ('./partials/_messages') %>
     <form action="/auth/login" method="post">
@@ -43,6 +43,9 @@
       <button class="bg-blue-700 hover:bg-blue-500 text-white cursor-pointer w-full py-2 px-4 rounded-md text-center block text-base mx-auto my-4 transition duration-300 ease-in-out" type="submit">
         Sign In
       </button>
+      <div  class="mb-4 mt-20 flex justify-center">
+        <a href="/auth/forgot-password" class="underline text-slate-400 mt-15 px-4">Help, I can't sign in</a>
+      </div>
     </form>
   </div>
 </body>
