--- a/src/views/partials/_change_avatar.ejs
+++ b/src/views/partials/_change_avatar.ejs
@@ -7,7 +7,7 @@
 <!-- ID: s3978081, s3977773, s3979367, s3978481, s3978826 -->
 <!-- Acknowledgement: W3School, TailwindCss, ChatGPT, Passport documentation, RemixIcons, Freepik, Web Dev Simplified -->
 
-<div class="flex items-center justify-center w-full md:w-2/5 max-h-fit m-auto my-5 auto bg-cover bg-center bg-gradient-to-r from-pink-300 to-purple-400 rounded-lg shadow-lg">
+<div class="flex items-center justify-center w-full md:w-2/5 max-h-fit m-auto my-5 auto bg-cover bg-center bg-gradient-to-r from-[#56CCF2] to-[#2F80ED] rounded-lg shadow-lg">
     <% if (userType == "Customer") { %>
         <form action="/users/customer/profile/update-picture" method="post">
     <% } else if (userType == "Vendor") { %>
