--- a/src/views/register_form.ejs
+++ b/src/views/register_form.ejs
@@ -13,9 +13,9 @@
 </head>
 <body class="flex items-center justify-center h-screen bg-cover bg-center bg-gradient-to-r from-[#56CCF2] to-[#2F80ED]" >
     <div class="bg-white p-10 w-11/12 md:w-5/12 rounded-2xl shadow-2xl">
-        <img src="/svg/lazada.svg" class="mx-auto w-10" alt="Alizada logo" >
-        <h1 class="text-center text-2xl font-bold mb-5">Welcome to Alizada!</h1>
-        <p class="text-center text-gray-700 mb-2">Choose your role:</p>
+        <img src="/svg/shopmee-logo.svg" class="mx-auto w-20" alt="Shopmee logo" >
+        <h1 class="text-center text-2xl font-bold mb-5">Welcome to Shopmee!</h1>
+        <p class="text-center text-gray-700 mb-2">You are:</p>
         <div class="mb-4">
             <a href="/auth/register/customer" class="bg-green-500 hover:bg-green-600 text-white cursor-pointer w-full py-2 px-4 rounded-md text-center block text-base mx-auto my-4 transition duration-300 ease-in-out">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 inline" viewBox="0 0 24 24"><path d="M4 22C4 17.5817 7.58172 14 12 14C16.4183 14 20 17.5817 20 22H18C18 18.6863 15.3137 16 12 16C8.68629 16 6 18.6863 6 22H4ZM12 13C8.685 13 6 10.315 6 7C6 3.685 8.685 1 12 1C15.315 1 18 3.685 18 7C18 10.315 15.315 13 12 13ZM12 11C14.21 11 16 9.21 16 7C16 4.79 14.21 3 12 3C9.79 3 8 4.79 8 7C8 9.21 9.79 11 12 11Z" fill="rgba(255,255,255,1)"></path></svg>
@@ -25,7 +25,7 @@
         <div class="mb-4">
             <a href="/auth/register/vendor" class="bg-green-500 hover:bg-green-600 text-white cursor-pointer w-full py-2 px-4 rounded-md text-center block text-base mx-auto my-4 transition duration-300 ease-in-out">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 inline" viewBox="0 0 24 24"><path d="M7 5V2C7 1.44772 7.44772 1 8 1H16C16.5523 1 17 1.44772 17 2V5H21C21.5523 5 22 5.44772 22 6V20C22 20.5523 21.5523 21 21 21H3C2.44772 21 2 20.5523 2 20V6C2 5.44772 2.44772 5 3 5H7ZM16 15H13V16H11V15H8V19H16V15ZM8 7V13H11V12H13V13H16V7H8ZM6 13V7H4V13H6ZM18 13H20V7H18V13ZM6 15H4V19H6V15ZM18 15V19H20V15H18ZM9 3V5H15V3H9Z" fill="rgba(255,255,255,1)"></path></svg>
-                I'm a Vendor
+                I'm a Store Owner
             </a>
         </div>
         <div class="mb-4">
