--- a/src/views/register_shipper.ejs
+++ b/src/views/register_shipper.ejs
@@ -14,7 +14,7 @@
 </head>
 <body class="flex items-center justify-center h-screen bg-cover bg-center bg-gradient-to-r from-[#56CCF2] to-[#2F80ED]">
   <div class="bg-white p-10 w-11/12 md:w-5/12 rounded-2xl shadow-2xl">
-    <img src="/svg/lazada.svg" class="mx-auto w-10" alt="Alizada logo">
+    <img src="/svg/shopmee-logo.svg" class="mx-auto w-10" alt="Shopmee logo">
     <h1 class="text-center text-2xl font-bold mb-5">I'm a Shipper</h1>
     <%- include ('partials/_messages') %>
     <form action="/auth/register/shipper" method="post">
