--- a/src/views/register_vendor.ejs
+++ b/src/views/register_vendor.ejs
@@ -9,13 +9,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('partials/_head', {title: 'Register vendor'}) %>
+    <%- include('partials/_head', {title: 'Register store owner'}) %>
     <Script defer src="/js/fileUpload.js"></Script>
 </head>
 <body class="flex items-center justify-center h-screen bg-cover bg-center bg-gradient-to-r from-[#56CCF2] to-[#2F80ED]">
   <div class="bg-white p-10 w-11/12 md:w-5/12 rounded-2xl shadow-2xl">
-    <img src="/svg/lazada.svg" class="mx-auto w-10" alt="Alizada logo" >
-    <h1 class="text-center text-2xl font-bold mb-5">I'm a Vendor</h1>
+    <img src="/svg/shopmee-logo.svg" class="mx-auto w-10" alt="Shopmee logo" >
+    <h1 class="text-center text-2xl font-bold mb-5">I'm a Store Owner</h1>
     <%- include ('partials/_messages') %>
     <form action="/auth/register/vendor" method="post">
         <div class="mb-4">
