update-forgot-password-2

--- a/src/views/forgot_password.ejs
+++ b/src/views/forgot_password.ejs
@@ -13,14 +13,7 @@
           <label class="block text-gray-700 font-bold mb-2" for="username">
             Username
           </label>
-          <input
-            class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-            id="username"
-            type="username"
-            placeholder="Enter your Username"
-            required
-            value="<%= typeof username != 'undefined' ? username : ''%>"
-          >
+          <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" type="text" name="username" id="username" value="<%= typeof username != 'undefined' ? username : ''%>">
         </div>
         <div class="flex items-center justify-between">
           <button
@@ -29,6 +22,7 @@
             Reset Password
           </button>
         </div>
+        <%- include ('./partials/_messages') %>
       </form>
     </div>
   </div>
