--- a/src/views/partials/_head.ejs
+++ b/src/views/partials/_head.ejs
@@ -17,7 +17,7 @@
     rel="stylesheet"
 > 
 <link rel="stylesheet" href="/style.css">
-<link rel="icon" type="image/x-icon" href="/images/lazada.ico">
+<link rel="icon" type="image/x-icon" href="/svg/shopmee-logo.svg">
 <!--Script-->
 <!--FilePond-->
 <script src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.js"></script>
