--- a/src/views/register_customer.ejs
+++ b/src/views/register_customer.ejs
@@ -54,6 +54,13 @@
             <input class="border rounded-lg px-3 py-1 w-full" type="text" name="address" id="address" value="<%= typeof address != 'undefined' ? address : ''%>">
         </div>
         <div class="mb-4">
+            <label class="block text-gray-700 mb-2" for="email">
+                <svg viewBox="0 0 8 6" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 inline"><path d="m0 0h8v6h-8zm.75 .75v4.5h6.5v-4.5zM0 0l4 3 4-3v1l-4 3-4-3z"/></svg>
+                Email
+            </label>
+            <input class="border rounded-lg px-3 py-1 w-full" type="email" name="email" id="email" value="<%= typeof email != 'undefined' ? email : ''%>">
+        </div>
+        <div class="mb-4">
             <label class="block text-gray-700 mb-2" for="profilePicture">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 inline" viewBox="0 0 24 24"><path d="M21 15V18H24V20H21V23H19V20H16V18H19V15H21ZM21.0082 3C21.556 3 22 3.44495 22 3.9934V13H20V5H4V18.999L14 9L17 12V14.829L14 11.8284L6.827 19H14V21H2.9918C2.44405 21 2 20.5551 2 20.0066V3.9934C2 3.44476 2.45531 3 2.9918 3H21.0082ZM8 7C9.10457 7 10 7.89543 10 9C10 10.1046 9.10457 11 8 11C6.89543 11 6 10.1046 6 9C6 7.89543 6.89543 7 8 7Z"></path></svg>
                 Profile Picture
