--- a/src/views/partials/_banner_section_2.ejs
+++ b/src/views/partials/_banner_section_2.ejs
@@ -1,10 +1,11 @@
 <!-- RMIT University Vietnam -->
 <!-- Course: COSC2430 Web Programming -->
-<!-- Semester: 2023A -->
-<!-- Assessment: Assignment 2 -->
-<!-- Author: Hoang Thai Phuc, Nguyen Hoang Minh, Tran Nguyen Anh Minh, Tran Luu Quang Tung, Dao Bao Duy -->
-<!-- ID: s3978081, s3977773, s3979367, s3978481, s3978826 -->
+<!-- Semester: 2024A -->
+<!-- Assessment: Full-stack Web Application -->
+<!-- Author: Lam Quang Nhat,Bui Phuong Dong Quan, Nguyen Minh Khoi, Tran Nguyen Khang, Tran Gia Hung -->
+<!-- ID: s3980424, s3975939, s3978862, s3935748, S3979486 -->
 <!-- Acknowledgement: W3School, TailwindCss, ChatGPT, Passport documentation, RemixIcons, Freepik, Web Dev Simplified -->
+
 
                             <!-- The second banner section -->
 <section class="bg-gradient-to-br from-gray-200 via-slate-200 to-gray-300 rounded-md my-5 p-1">
