--- a/src/views/login_form.ejs
+++ b/src/views/login_form.ejs
@@ -18,7 +18,7 @@
 </head>
 <body class="flex items-center justify-center h-screen bg-cover bg-center bg-gradient-to-r from-[#56CCF2] to-[#2F80ED]">
   <div class="bg-slate-200 p-10 w-11/12 md:w-5/12 rounded-2xl shadow-2xl">
-    <img src="/svg/shopmee-logo.svg" class="mx-auto w-14" alt="Alizada logo">
+    <img src="/svg/shopmee-logo.svg" class="mx-auto w-14" alt="Shopmee logo">
     <h1 class="text-center text-2xl font-bold mb-5">Shopmee</h1>
     <%- include ('./partials/_messages') %>
     <form action="/auth/login" method="post">
